z-index fix

--- a/src/todo/add.css
+++ b/src/todo/add.css
@@ -30,6 +30,7 @@
     right: 0;
     position: fixed;
     top: 0;
+    z-index: 10;
   }
 
   .todo__add-input {
